--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -43,7 +43,7 @@
 .dropdown__content {
     display: none;
     position: absolute;
-    top: 48px;
+    top: 67px;
     right: -175px;
     background-color: #fff;
     border-radius: 5px;
@@ -52,7 +52,7 @@
     box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
     padding: 12px 16px;
     z-index: 1;
-    transform: translateY(20px);
+    /* transform: translateY(20px); */
     text-align: left;
     /* background-image: url(..img/rounded-rectangle.svg); */
 }
@@ -64,6 +64,7 @@
     border-right: 12px solid transparent;
     border-bottom: 12px solid #fff;
     border-left: 12px solid transparent;
+    opacity: 0.9;
 }
 .dropdown:hover .dropdown__content {
     display: block;
