--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -41,33 +41,34 @@
     float: right;
 }
 .dropdown__content {
-    display: none;
+    /* display: none; */
     position: absolute;
     top: 67px;
     right: -175px;
+    left: -9999px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 4px;
     width: 133px;
     height: 46px;
     box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
     padding: 12px 16px;
     z-index: 1;
-    /* transform: translateY(20px); */
     text-align: left;
-    /* background-image: url(..img/rounded-rectangle.svg); */
 }
 .dropdown__triangle {
     position: absolute;
-    top: -22px;
-    right: 1px;
-    border-top: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 12px solid #fff;
-    border-left: 12px solid transparent;
+    /* top: -22px; */
+    right: 3px;
+    border-top: 0px solid transparent;
+    border-right: 13px solid transparent;
+    border-bottom: 13px solid #fff;
+    border-left: 13px solid transparent;
     opacity: 0.9;
+    bottom: 100%;
 }
 .dropdown:hover .dropdown__content {
     display: block;
+    left: initial;
 }
 
 .workHours {
