--- a/css/sections/company.css
+++ b/css/sections/company.css
@@ -64,11 +64,18 @@
     margin-bottom: 65px;
     margin-left: 0px;
     margin-right: 105px;
+    filter: grayscale(100%);
+    -webkit-transition: grayscale, 2s;
+    transition: grayscale, 2s;
+    
 }
 .partners__img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+.partners__item:hover  {
+    filter: grayscale(0%);
 }
 /* .partners__link:hover .partners__icon_bmp {
     background: url(../../img/logo/bmp.png) center center no-repeat;
